--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
     font-weight: 700;
     font-size: 3rem;
     margin: 20px;
+    line-height: 3.5rem;
 }
 
 #section-one p {
@@ -113,10 +114,28 @@ body {
     font-weight: 700;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 900px) {
 
+    body {
+        flex-direction: row;
+    }
 
+    #section-one {
+        width: 50%;
+        padding: 0 25px;
+        text-align: left;
+    }
 
+    #section-one h1 {
+        margin: unset;
+    }
 
+    #section-one p {
+        font-size: 1.2rem;
+    }
+
+    #section-two {
+        width: 50%;
+    }
 
 }
