--- a/style.css
+++ b/style.css
@@ -79,12 +79,24 @@ body {
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 15px 0;
   box-shadow: 0px 10px 0px -1px hsla(0, 0%, 0%, 0.15);
   margin-bottom: 50px;
 }
 
+#section-two div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+}
+
 #formulario input {
+  width: 90%;
   margin: 10px 20px;
   padding: 15px 25px;
   font-weight: 600;
@@ -92,6 +104,8 @@ body {
   border: 1px solid var(--grayish-blue);
   border-radius: 5px;
   outline-color: var(--grayish-blue);
+  position: relative;
+  z-index: 1;
 }
 
 #btn-submit {
@@ -104,59 +118,42 @@ body {
 }
 
 #btn-submit:hover {
-    background-color: rgb(119, 225, 179);
-    box-shadow: 0px 5px 0px 0px rgb(119, 199, 162);
+  background-color: rgb(119, 225, 179);
+  box-shadow: 0px 5px 0px 0px rgb(119, 199, 162);
 }
 
-#formulario p {
+.disclaimer {
   font-size: 1.25rem;
   color: var(--grayish-blue);
   margin: 5px 30px;
 }
 
-#formulario p a {
-    text-decoration: none;
+.disclaimer a {
+  text-decoration: none;
   color: var(--my-red);
   font-weight: 700;
   cursor: pointer;
 }
 
-.custom-alert {
+.icon-error {
+  position: absolute; 
+  /* right: 70px;  */
+  top: 23px;
+  right: 50px;
+  z-index: 10;
+  visibility: hidden;
+}
+
+.message-error {
+  width: 90%;
+  align-self: center;
+  text-align: right;
+  color: var(--my-red);
+  font-weight: 500;
+  font-style: italic;
+  margin-bottom: 10px;
   display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  justify-content: center;
-  align-items: center;
 }
-
-.custom-alert-content {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 5px;
-  text-align: center;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-
-.custom-alert-content p {
-  font-size: 1.5rem;
-margin-bottom: 25px;
-}
-
-.custom-alert button {
-  padding: 10px 20px;
-  background-color: #007BFF;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-
-
 
 @media (min-width: 900px) {
   body {
@@ -181,7 +178,7 @@ margin-bottom: 25px;
     width: 50%;
   }
 
-  #formulario p {
+  .disclaimer {
     margin-bottom: 30px;
   }
 }
