--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ body {
 }
 
 .icon-error {
-  position: absolute; 
+  position: absolute;
   /* right: 70px;  */
   top: 23px;
   right: 50px;
@@ -153,6 +153,41 @@ body {
   font-style: italic;
   margin-bottom: 10px;
   display: none;
+}
+
+.custom-alert {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+  z-index: 30;
+}
+
+.custom-alert-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.custom-alert-content p {
+  font-size: 2rem;
+  margin-bottom: 25px;
+}
+
+.custom-alert button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 @media (min-width: 900px) {
